--- a/javaKT2/nbproject/project.properties
+++ b/javaKT2/nbproject/project.properties
@@ -56,7 +56,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=javakt2.JavaKT2
+main.class=javakt2.KT2testikas
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
